--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,19 @@
 {
-    "manifest_version": 1,
+    "manifest_version": 2,
     "type": "core",
     "name": "LiteLoader 插件市场",
     "slug": "plugins_marketplace",
     "description": "LiteLoaderQQNT的插件市场",
     "version": "0.1.0",
-    "author": [
-        {
-            "name": "沫烬染",
-            "link": "https://github.com/mo-jinran"
-        }
-    ],
+    "thumbnail": "",
+    "author": {
+        "name": "沫烬染",
+        "link": "https://github.com/mo-jinran"
+    },
+    "repository": {
+        "repo": "mo-jinran/LiteLoaderQQNT-Plugins-Marketplace",
+        "branch": "main"
+    },
     "platform": [
         "win32",
         "linux",
